--- a/CCDLAB.csproj
+++ b/CCDLAB.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>CCDLAB</RootNamespace>
     <AssemblyName>CCDLAB</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -31,6 +31,7 @@
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -64,7 +65,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>CCDLAB.ico</ApplicationIcon>
@@ -73,17 +74,17 @@
     <StartupObject>CCDLAB.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="JPChart">
-      <HintPath>..\JPChart\bin\Release\JPChart.dll</HintPath>
-    </Reference>
-    <Reference Include="JPFITS, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="JPChart, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\JPFITS\JPFITS\bin\Release\JPFITS.dll</HintPath>
+      <HintPath>..\..\JPChart\JPChart\bin\Release\JPChart.dll</HintPath>
+    </Reference>
+    <Reference Include="JPFITS">
+      <HintPath>..\..\JPFITS\JPFITS\bin\Release\JPFITS.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="MLCCDLAB, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Matlab .net4.0 R2021b x64\MLCCDLAB.dll</HintPath>
+      <HintPath>..\..\Matlab .net4.0 R2021b x64\MLCCDLAB.dll</HintPath>
     </Reference>
     <Reference Include="MWArray, Version=2.18.1.0, Culture=neutral, PublicKeyToken=e1d84a0da19db86f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
