--- a/CCDLAB/CCDLAB.csproj
+++ b/CCDLAB/CCDLAB.csproj
@@ -90,6 +90,7 @@
     <Reference Include="MWArray, Version=2.18.1.0, Culture=neutral, PublicKeyToken=e1d84a0da19db86f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files\MATLAB\R2021b\toolbox\dotnetbuilder\bin\win64\v4.0\MWArray.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
