--- a/CCDLAB/CCDLAB.csproj
+++ b/CCDLAB/CCDLAB.csproj
@@ -132,6 +132,10 @@
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="CCDLABWCS.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ColorImageCreator.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +160,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GifWriter.cs" />
     <Compile Include="GSEExtractImg.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,12 +172,6 @@
     </Compile>
     <Compile Include="HeaderKey.Designer.cs">
       <DependentUpon>HeaderKey.cs</DependentUpon>
-    </Compile>
-    <Compile Include="JPPlot.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="JPPlot.Designer.cs">
-      <DependentUpon>JPPlot.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -207,6 +206,12 @@
     <Compile Include="UVIT_StatsPlot.Designer.cs">
       <DependentUpon>UVIT_StatsPlot.cs</DependentUpon>
     </Compile>
+    <Compile Include="UVSortRegisterFilesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UVSortRegisterFilesForm.Designer.cs">
+      <DependentUpon>UVSortRegisterFilesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="WCSAutoCVALList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -234,9 +239,6 @@
     <EmbeddedResource Include="HeaderKey.resx">
       <DependentUpon>HeaderKey.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="JPPlot.resx">
-      <DependentUpon>JPPlot.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -261,6 +263,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UVIT_StatsPlot.resx">
       <DependentUpon>UVIT_StatsPlot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UVSortRegisterFilesForm.resx">
+      <DependentUpon>UVSortRegisterFilesForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="WCSAutoCVALList.resx">
       <DependentUpon>WCSAutoCVALList.cs</DependentUpon>
